```mermaid
classDiagram

class User {
    +id : Integer
    +email : String
    +password : String
    +role : String
    +createdAt : DateTime
    +updatedAt : DateTime
}

class Farmer {
    +id : Integer
    +firstName : String
    +lastName : String
    +phone : String
    +region : String
    +userId : Integer
    +createdAt : DateTime
    +updatedAt : DateTime
}

class Plot {
    +id : Integer
    +name : String
    +area : Float
    +municipality : String
    +farmerId : Integer
    +createdAt : DateTime
    +updatedAt : DateTime
}

class Product {
    +id : Integer
    +name : String
    +category : String
    +unit : String
    +createdAt : DateTime
    +updatedAt : DateTime
}

class Harvest {
    +id : Integer
    +quantity : Float
    +harvestDate : Date
    +status : String
    +plotId : Integer
    +productId : Integer
    +createdAt : DateTime
    +updatedAt : DateTime
}

class Market {
    +id : Integer
    +name : String
    +city : String
    +region : String
    +createdAt : DateTime
    +updatedAt : DateTime
}

class MarketPrice {
    +id : Integer
    +pricePerKg : Float
    +priceDate : Date
    +marketId : Integer
    +productId : Integer
    +createdAt : DateTime
    +updatedAt : DateTime
}

class Offer {
    +id : Integer
    +quantity : Float
    +askingPrice : Float
    +status : String
    +harvestId : Integer
    +marketId : Integer
    +createdAt : DateTime
    +updatedAt : DateTime
}

User "1" --> "0..1" Farmer : has profile
Farmer "1" --> "0..*" Plot : owns
Plot "1" --> "0..*" Harvest : produces
Product "1" --> "0..*" Harvest : harvested as
Market "1" --> "0..*" MarketPrice : records prices
Product "1" --> "0..*" MarketPrice : has market prices
Harvest "1" --> "0..*" Offer : generates
Market "1" --> "0..*" Offer : listed at
```